Började koda lite för att få en idé på layout, har också startat skiss och letat bilder för inspiration

--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -26,6 +26,8 @@
 
     <h2>2. Planering</h2>
 
+    <p>Jag har börjat att komma på idéer och min tanke är att skapa en sida för en kebabgrill. Sidan ska bestå av en "om oss" sida, meny-sida och en startsida. Eventuellt kommer reklam (kanske) läggas till på höger sida eller på botten av skärmen. Bild-länkar för att följa restaurangen social media ska finnas i sidfoten.</p>
+
     <h3>2.1 Handskiss</h3>
     <!-- Här lägger du en bild på din handskiss av layouten. Viktigt att du beskriver vilka boxelement som ska användas. Visa även hur du tänker med ditt grid (Hur många kolumner?) -->
 
