--- a/om_oss.html
+++ b/om_oss.html
@@ -10,15 +10,22 @@
     
     <p>Kockarna på Chriggans kebabgrill har länge haft passion för matlagning. Vår business startade i en liten gatuhörna i Göteborgs förort. Med hjälp av kockarnas ambition för att laga mat kunde Chriggans kebabgrill leverera kebab av högsta kvalitet till folket.</p>
 
+    <p>Vi serverar även halal och kosher.</p>
+
     <h1>Våra kockar</h1>
 
 <section>
     
     <h2>Mehmet Polat</h2>
-        <a href="https://www.facebook.com/" target="_blank"><img src="img/luis-vidal-ANHUqSjTIPQ-unsplash.jpg" alt="Bild på respekterad kock"></a>
+        <img src="img/luis-vidal-ANHUqSjTIPQ-unsplash.jpg" alt="Bild på respekterad kock" id="mehmet">
 
-    <p>Mehmet är en mycket begåvad kock</p>
+    <p>Mehmet är en mycket begåvad kock. Gör bra kebabrulle Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi blanditiis ea eaque, dignissimos perferendis ducimus vero amet. Saepe eum ab, accusamus in laboriosam, mollitia doloremque eos temporibus fugit commodi nisi quis nam minima placeat quidem a alias obcaecati eaque recusandae accusantium? Molestiae ipsam fuga cum exercitationem earum quia officiis autem assumenda, ad corrupti labore perferendis temporibus laudantium deleniti porro, nemo animi corporis eaque quos culpa magni ipsum, aliquam dignissimos? Sequi illum dolor asperiores corrupti, perspiciatis eaque ullam, aut quidem esse officiis rem repudiandae odit, unde exercitationem laudantium provident earum fuga! Eius ipsum sapiente consequatur temporibus, beatae ipsam illum natus est.</p>
+
 
 </section>
+
+
+
+
 </body>
 </html>
