Fixat lite grid och lagt till ny font. Också fixat i css och felsökt en bild-styling

--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -93,7 +93,7 @@
 
     <h3>Lektioner vecka 49</h3>
     <!-- Fyll på med dokumentation här. -->
-
+    <p>Jag har gjort en nav-meny som har en fixerad position där bland annat loggan och länkar till andra html-dokument kommer vara (om oss, kontakta oss). Ska  göra en logga snart i photoshop och förhoppningsvis få nya idéer att gå vidare på i index dokumentet.</p>
     <h3>Lektioner vecka 50</h3>
     <!-- Fyll på med dokumentation här. -->
 
