--- a/om_oss.html
+++ b/om_oss.html
@@ -16,11 +16,13 @@
 
 <section>
     
-    <h2>Mehmet Polat</h2>
-        <img src="img/luis-vidal-ANHUqSjTIPQ-unsplash.jpg" alt="Bild på respekterad kock" id="mehmet">
+    <h2>Mehmet Polat ta bort style grejs i taggen</h2>
+        <img src="img/luis-vidal-ANHUqSjTIPQ-unsplash.jpg" alt="Bild på respekterad kock" id="mehmet" style="width: 200px; height: 225px;">
 
     <p>Mehmet är en mycket begåvad kock. Gör bra kebabrulle Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi blanditiis ea eaque, dignissimos perferendis ducimus vero amet. Saepe eum ab, accusamus in laboriosam, mollitia doloremque eos temporibus fugit commodi nisi quis nam minima placeat quidem a alias obcaecati eaque recusandae accusantium? Molestiae ipsam fuga cum exercitationem earum quia officiis autem assumenda, ad corrupti labore perferendis temporibus laudantium deleniti porro, nemo animi corporis eaque quos culpa magni ipsum, aliquam dignissimos? Sequi illum dolor asperiores corrupti, perspiciatis eaque ullam, aut quidem esse officiis rem repudiandae odit, unde exercitationem laudantium provident earum fuga! Eius ipsum sapiente consequatur temporibus, beatae ipsam illum natus est.</p>
 
+
+    <a href="index.html">Allah</a>
 
 </section>
 
