Standardiserade grid för alla html dokument och modifierade CSS-koden för mest för index.html

--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -96,7 +96,7 @@
     <p>Jag har gjort en nav-meny som har en fixerad position där bland annat loggan och länkar till andra html-dokument kommer vara (om oss, kontakta oss). Ska  göra en logga snart i photoshop och förhoppningsvis få nya idéer att gå vidare på i index dokumentet.</p>
     <h3>Lektioner vecka 50</h3>
     <!-- Fyll på med dokumentation här. -->
-
+    <p>Fixade problem med bilder i "om oss" dokumentet.</p>
 
     <h2>4. Testning</h2>
     <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? -->
