Största uppdateringen, fixade en bakgrundsbild för varje .html-fil, förbättrade nav-menyn, satte in min logotyp på navbaren och .psd-filen i misc mappen

--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -106,5 +106,7 @@
     Nyanserat: "hur hade det blivit om jag istället hade...?"
     Konkreta förbättringsförslag i produkt + process. -->
 
+    Mot slutet av 
+
 </body>
 </html>
