Finishing touch och dokumentation. Har skrivit dokumentationen på hand innan så fyllde i det här nu

--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chriggan kebabgrill</title>
+    <title>Chriggans kebabgrill hemsida</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="index_html">
 
 
-<div class="gridwrapper_indexhtml">
+<div id="gridwrapper_indexhtml">
 
-    <header id="logo_pos">
-        <a href="index.html"><img src="/img/logotype.png" alt="" id="logotype"></a>
-    </header>
-
-    <header class="big-font_centred">
-        Välkommen till Chriggans kebabgrill!
-    </header>
+    <nav id="logo_pos">
+        <a href="index.html"><img src="/img/logotype.png" alt="Logotyp" id="logotype"></a>
+    </nav>
 
     <nav class="navmeny">
         <ul class="nav-system">
@@ -31,21 +27,22 @@
         </ul>
     </nav>
 
+    <header class="big-font_centred">
+        Välkommen till Chriggans kebabgrill!
+    </header>
 
-
-    <main class="big-font_centred" id="story">
-    
+    <main id="open-hours">
+        <h2 class="big-font">Öppettider:</h2>
+            <p>Mån-Fre 11-20</p>
+            <p>Lör 10-22</p>
+            <p>Sön 12-20</p>
     </main>
-    
-
-
-
  
-
     <footer class="footer-txt">
-        <p >©Chriggans kebabgrill</p>
-        <p >Kontakta oss: 0303748990</p>
-        <p >I samarbete med RAID: Shadow Legends</p>
+        <p>©Chriggans kebabgrill</p>
+        <p>Kontakta oss: <a href="tel:0303748990">0303748990</a></p>
+        <p>Kebabgatan 21, Göteborg</p>
+        <p>I samarbete med RAID: Shadow Legends</p>
     </footer>
 
 
