--- a/meny.html
+++ b/meny.html
@@ -3,20 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chriggans kebabgrill</title>
+    <title>Meny</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="meny_html">
 
-<div class="gridwrapper_menyhtml">
+<div id="gridwrapper_menyhtml">
 
-    <header id="logo_pos">
-        <a href="index.html"><img src="/img/logotype.png" alt="" id="logotype"></a>
-    </header>
-
-    <header class="intro">
-        <h2 class="txt-center"><p id="txt-center">Bästa kebab i stan</h2>Vår meny</p>
-    </header>       
+    <nav id="logo_pos">
+        <a href="index.html"><img src="/img/logotype.png" alt="Logotyp" id="logotype"></a>
+    </nav>
 
     <nav class="navmeny">
         <ul class="nav-system">
@@ -29,11 +25,16 @@
         </ul>
     </nav>
 
+    <header>
+        <h2 class="big-font_centred" id="var-meny">Bästa kebaben i Göteborg</h2>
+        <p id="var-meny">Vår meny</p>
+    </header>       
+
     <main class="meny-saker">
 
-        <h2><span>Kebabrätter</h2>...gjord på lammkött</span>
+        <h2 class="meny-txt">Kebabrätter</h2>
 
-        <div class="meny-enkel">
+        <div>
             <div class="meny-txt">
                 <h4><p>1. Kebabspett</h4>7st, serveras med ris eller pommes</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, placeat?</p>
@@ -41,7 +42,7 @@
             </div>
         </div>
 
-        <div class="meny-enkel">
+        <div >
             <div class="meny-txt">
                 <h4><p>2. Kebab burger</h4>1st, serveras med pommes</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, placeat?</p>
@@ -49,7 +50,7 @@
             </div>
         </div>
 
-        <div class="meny-enkel">
+        <div>
             <div class="meny-txt">
                 <h4><p>3. Kebabpizza</h4>7st, serveras med ris eller pommes</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, placeat?</p>
@@ -61,9 +62,9 @@
 
     <main class="meny-saker-2">
         
-        <h2><span>Halal mat</h2>...tillåtet för alla!</span>
+        <h2 class="meny-txt">Halal mat</h2>
 
-        <div class="meny-enkel">
+        <div>
             <div class="meny-txt">
                 <h4><p>4. Sallad med bönor</h4>Lorem ipsum dolor sit amet.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, placeat?</p>
@@ -71,7 +72,7 @@
             </div>
         </div>
 
-        <div class="meny-enkel">
+        <div>
             <div class="meny-txt">
                 <h4><p>5. Chicken burger</h4>1st, serveras med pommes</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, placeat?</p>
@@ -79,7 +80,7 @@
             </div>
         </div>
 
-        <div class="meny-enkel">
+        <div>
             <div class="meny-txt">
                 <h4><p>6. Köttbullar</h4>12st, serveras med potatis, ris eller pommes</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, placeat?</p>
@@ -88,6 +89,15 @@
         </div>
 
     </main>
+
+    <footer class="footer-txt">
+        <p>©Chriggans kebabgrill</p>
+        <p>Kontakta oss: <a href="tel:0303748990">0303748990</a></p>
+        <p>Kebabgatan 21, Göteborg</p>
+        <p>I samarbete med RAID: Shadow Legends</p>
+    </footer>
+
+</div>
 
 </body>
 </html>
