--- a/misc/dokumentation.html
+++ b/misc/dokumentation.html
@@ -23,7 +23,7 @@
 
     <h2>1. Idébeskrivning</h2>
     <!-- Vad ska du göra? Vilken är din målgrupp? Om du utvecklar en tidigare sida; Vad ska du förändra/utveckla? -->
-
+        <p>"Jag ska göra en hemsida riktade mot alla som gillar kebab/halal mat. Min hemsida ska bestå av en huvudsida, meny och "om oss" sida."</p>
     <h2>2. Planering</h2>
 
     <p>Jag har börjat att komma på idéer och min tanke är att skapa en sida för en kebabgrill. Sidan ska bestå av en "om oss" sida, meny-sida och en startsida. Eventuellt kommer reklam (kanske) läggas till på höger sida eller på botten av skärmen. Bild-länkar för att följa restaurangen social media ska finnas i sidfoten.</p>
@@ -33,6 +33,7 @@
 
     <h3>2.2 Schema</h3>
     <!-- Vad ska du göra när? Inte för detaljerat. -->
+    Första veckan skapar jag en grid för varje html-dokument, andra veckan letar jag bilder på unsplash/Creative commons för logga och bilder på sidan och nav-bar, tredje veckan gör jag finish, global footer och boxar.
 
     <table>
         <tr>
@@ -43,6 +44,7 @@
             <td>47</td>
             <td>
             <!-- Vad görs på lektionerna vecka 47? -->
+            Grids/leta inspiration
             </td>
             <td>
             <!-- Vad görs utanför lektionerna vecka 47? -->
@@ -53,6 +55,7 @@
             <td>48</td>
             <td>
             <!-- Vad görs på lektionerna vecka 48? -->
+            Leta passande bilder
             </td>
             <td>
             <!-- Vad görs utanför lektionerna vecka 48? -->
@@ -63,6 +66,7 @@
             <td>49</td>
             <td>
             <!-- Vad görs på lektionerna vecka 49? -->
+            Koda grid/flex och allt däremellan
             </td>
             <td>
             <!-- Vad görs utanför lektionerna vecka 49? -->
@@ -73,9 +77,11 @@
             <td>50</td>
             <td>
             <!-- Vad görs på lektionen vecka 50? -->
+            CSS
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 50? -->
+            Finish, allt som blir över vid v. 50
             </td>
         </tr>
 
@@ -87,26 +93,29 @@
 
     <h3>Lektioner vecka 47</h3>
     <!-- Fyll på med dokumentation här. -->
-
+        <p>Har kollat på olika restaurang-sidor att ta inspiration ifrån</p>
     <h3>Lektioner vecka 48</h3>
     <!-- Fyll på med dokumentation här. -->
-
+        <p>Gjorde grid och letade inspiration</p>
     <h3>Lektioner vecka 49</h3>
     <!-- Fyll på med dokumentation här. -->
-    <p>Jag har gjort en nav-meny som har en fixerad position där bland annat loggan och länkar till andra html-dokument kommer vara (om oss, kontakta oss). Ska  göra en logga snart i photoshop och förhoppningsvis få nya idéer att gå vidare på i index dokumentet.</p>
+        <p>Jag har gjort en nav-meny som har en fixerad position där bland annat loggan och länkar till andra html-dokument kommer vara (om oss, kontakta oss). Ska  göra en logga snart i photoshop och förhoppningsvis få nya idéer att gå vidare på i index dokumentet.</p>
     <h3>Lektioner vecka 50</h3>
     <!-- Fyll på med dokumentation här. -->
-    <p>Fixade problem med bilder i "om oss" dokumentet.</p>
+        <p>Fixade problem med bilder i "om oss" dokumentet. Det visade sig att jag inte hade länkat CSS-filen korrekt till html-filen.</p>
 
     <h2>4. Testning</h2>
     <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? -->
+
+        <p>Jag har testat sidan på Internet explorer, Microsoft edge och Chrome. När jag kodade hade jag Chrome som referens för utseende, därför ser allt bäst ut där. Filerna öppnades lokalt också, vissa bilder som var länkade via en annan sida kunde inte hämtas i denna testningen. Nav-baren ville inte visas korrekt på Explorer och vissa bilder lästes inte in på edge, förmodligen pga absoluta bild-länkar. Contrastchecker gav 3 st gröna och 3 st röda poäng och en ratio på 4.81.</p>
+
 
     <h2>5. Utvärdering (skrivs i slutet av arbetet, innan inlämning)</h2>
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
     Nyanserat: "hur hade det blivit om jag istället hade...?"
     Konkreta förbättringsförslag i produkt + process. -->
 
-    Mot slutet av 
+        <p>Griden på de olika html-dokumenten blev jag nöjd med. Samt bakgrundsbilderna på body-taggen blev bra. Jag valde bort blur på meny-html för det såg bättre ut enligt mig. Jag tycker att jag hade kunnat ta visst arbete tidigare om jag var motiverad. Hade kunnat göra lite på tåget varje dag (då vi var i skolan) för att beta av gradvis istället för att belasta på slutet. Om jag istället hade gjort saker på sidan hemma innan sista veckan hade jag haft mer tid att tänka och lära mig ny syntax. CSS dokumentet hade kunnat vara mer strukturerat för att spara lite utrymme. Annat förbättringsförslag är att jag nästa gång planerar så att jag kan öva in syntaxen ordentligt innan jag börjar sätta mig ner och koda. Gällande semantiska taggar borde jag kanske valt något annat än main-taggen när det fanns delar 2 st på samma lager, hade typ kunnat ta section-taggen eller article istället. Processen hade också kunnat bli bättre om jag gjorde flera templates och välja senare för att se vilken som passar bäst, istället för att bara gå på en grid och sedan ändra.</p>
 
 </body>
 </html>
